# cds-helper

./: README.md  makefile  pyproject.toml  setup_py
.github/workflows/: run-checks.yml  run-package-test.yml
cds_helper/: demo.py
cds_helper/cli/: __init__.py  cli.py  request.py  template.py
cds_helper/core/: core.py
src/cdshelper/: __init__.py
src/tests/: conftest.py  test_requests.py
